Bug 15806 - samba-tool acl commands broken for relative path names
Summary: samba-tool acl commands broken for relative path names
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.22.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-12 14:48 UTC by Volker Lendecke
Modified: 2025-02-20 13:03 UTC (History)
1 user (show)

See Also:


Attachments
v4.22 fix cherry-picked from master (7.46 KB, patch)
2025-02-17 14:16 UTC, Björn Baumbach
bbaumbach: review+
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2025-02-12 14:48:38 UTC
Have patch, need bugnumber
Comment 2 Samba QA Contact 2025-02-14 16:19:21 UTC
This bug was referenced in samba master:

26705d047cb885957a49939370e03047429351b6
3e1c19c2c3f8b0bdf21301431bc886757fd4b3ce
Comment 3 Björn Baumbach 2025-02-17 14:16:03 UTC
Created attachment 18570 [details]
v4.22 fix cherry-picked from master
Comment 4 Björn Baumbach 2025-02-17 14:17:25 UTC
(In reply to Björn Baumbach from comment #3)
requires fix for 15807 for context
Comment 5 Jule Anger 2025-02-20 10:14:09 UTC
Pushed to autobuild-v4-22-test.
Comment 6 Samba QA Contact 2025-02-20 11:23:29 UTC
This bug was referenced in samba v4-22-test:

aad39687b6f1facdba5a03319ee6bc45f5915547
3a7591436e68d6f18ac8db0fddf853236b5378d0
Comment 7 Jule Anger 2025-02-20 12:52:56 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2025-02-20 13:03:27 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.0rc3):

aad39687b6f1facdba5a03319ee6bc45f5915547
3a7591436e68d6f18ac8db0fddf853236b5378d0